Change Nav Block

--- a/First_Website/second.html
+++ b/First_Website/second.html
@@ -9,16 +9,25 @@
 
         html, body {
             font-family: sans-serif; /*шрифт статьи*/
-            font-size: 0.95em; /*Размер шрифта*/
-            line-height: 1.5em; /*Межстрочный интервал*/
-            margin: -0.5em 0 0;  /* Обнуляем отступы браузера и поднимает текст немного вверх*/
+            font-size: 0.95em; /*Размер ШРИФТа*/
+            line-height: 1.5em; /*Межстрочный ИНТЕРВАЛ*/
+            margin: -0.5em 0 0;  /* Обнуляем ОТСТУПЫ БРАУЗЕРА и поднимает текст немного вверх*/
 
         }
 
         nav { /*Оформление блока навигации*/
-            float: left;    /*Выравниевание по левому краю*/
-            width: 10% ;    /*Создаем блок навигации в виде левой колонки*/
-            margin: 1.35em 0.2em 0 0; /*Создаем отступы блока*/
+            float: left;    /*ВЫРАВНИВАНИЕ по левому краю*/
+            width: 10% ;    /*ШИРИНА блока навигации на странице*/
+            display: inline-block; /*ТИП отображения блока навигации*/
+
+            position: fixed; /*ПОЗИЦИОНИРОВАНИЕ блока навигации относительно страницы*/
+            top: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ сверху*/
+            right: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ справа*/
+            bottom: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ снизу*/
+            left: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ слева*/
+            
+            background-color: #e6e6e6; /*ЦВЕТ блока навигации*/
+            text-indent: 1em; /*ОСТУП текста от края экрана*/
 
         }
 
@@ -37,7 +46,7 @@
         }
 
         .break_line { /*Оформление красной строки у абзацев*/
-            text-indent: 2.8em; /*Отступ от края экрана*/
+            text-indent: 2.8em; /*ОТСТУП текста от края экрана*/
 
         }
 
