Improve Navigaton, Improve changing scale

--- a/First_Website/main.html
+++ b/First_Website/main.html
@@ -21,33 +21,10 @@
 <blockquote>Hello! How are you?</blockquote>
 <a href="second.html">Kangaroo</a>
 
+1. Выравнивание строчных и блочных элементов различается
+2. Для создания ссылки "Наверх" в рамках одной страницы можно использовать javascript
 
 
 
 </body>
 </html>
-
-<!-- <nav>
-
-    <ul>
-        <li>Home</li>
-        <li>History</li>
-    </ul>
-    <ul>
-        <li>Map</li>
-        <li>Travel</li>
-        <li>Booking</li>
-        <li>Contacts</li>
-    </ul>
-</nav>
-
-<article>
-    <h1>Saint-Petersburg</h1>
-    <p>One of the world's most beautiful cities, St. Petersburg has all the ingredients for an unforgettable travel experience.</p>
-
-</article>
-
-<footer>
-    Travel
-</footer>
-*/ --!>
