--- a/First_Website/second.html
+++ b/First_Website/second.html
@@ -12,53 +12,56 @@
             font-size: 0.95em; /*Размер ШРИФТа*/
             line-height: 1.5em; /*Межстрочный ИНТЕРВАЛ*/
             margin: -0.5em 0 0;  /* Обнуляем ОТСТУПЫ БРАУЗЕРА и поднимает текст немного вверх*/
+        }
 
+        section, header { /* Оформление Главной статьи и заголовка*/
+            margin-left: 11vw; /*Отступ от левого края экрана, создание колонки навигации*/
         }
 
         nav { /*Оформление блока навигации*/
             float: left;    /*ВЫРАВНИВАНИЕ по левому краю*/
-            width: 10% ;    /*ШИРИНА блока навигации на странице*/
+            width: 9.5vw ;    /*ШИРИНА блока навигации на странице*/
             display: inline-block; /*ТИП отображения блока навигации*/
 
-            position: fixed; /*ПОЗИЦИОНИРОВАНИЕ блока навигации относительно страницы*/
+            position: fixed; /*ПОЗИЦИОНИРОВАНИЕ блока навигации относительно страницы; fixed распологает блок постоянным по размеру страницы и при скролле перемещается другой блок, а этот постоянен*/
             top: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ сверху*/
             right: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ справа*/
             bottom: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ снизу*/
             left: 0; /*ОТСТУП ПОЗИЦИОНИРОВАНИЯ слева*/
-            
+            padding-left: 1vw;
             background-color: #e6e6e6; /*ЦВЕТ блока навигации*/
-            text-indent: 1em; /*ОСТУП текста от края экрана*/
-
+            /*text-indent: 1em; /*ОСТУП текста от края экрана*/
         }
 
-        section, header { /* Оформление Главной статьи и заголовка*/
-            margin-left: 11%; /*Отступ от левого края экрана, создание колонки навигации*/
-
+        hr { /* РАЗДЕЛИТЕЛЬ*/
+            margin-top: -1.05vh; /*Поднятие вверх на 20 px из-за большого отступа*/
         }
 
-        #main_pic { /* Оформление главного изображения */
-            margin: 0.07em; /* Отступ от краев фотографии */
-            border-color: black; /* Цвет границы 1px*/
-        }
-
-        hr { /* Оформление подчеркивания названий разделов*/
-            margin-top: -1.05em; /*Поднятие вверх на 20 px из-за большого отступа*/
-        }
-
-        .break_line { /*Оформление красной строки у абзацев*/
-            text-indent: 2.8em; /*ОТСТУП текста от края экрана*/
-
-        }
-
-        a:hover {
+        a:hover { /*ССЫЛКИ при наведении*/
             color: mediumseagreen; /*Выделение ссылки при наведении на неё*/
         }
 
-        #nav_link {
-            font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
-            font-size: 1.05em;
-            text-align: right;
-            margin-right: 0.5em;
+        img { /* ГЛАВНОЕ ИЗОБРАЖЕНИЕ */
+            margin: 0.17em; /* Отступ от краев фотографии */
+            border: 0.07em solid black;
+        }
+        .break_line { /*КРАСНАЯ СТРОКА у абзацев*/
+            text-indent: 2.8em; /*ОТСТУП текста от края экрана*/
+        }
+
+        #main_pic{ /*ГЛАВНОЕ ФОТО*/
+            float: right; /*ВЫРАВНИВАНИЕ блокового элемента */
+            display: block;
+            max-width: 20vw;
+            height: auto;
+        }
+
+        #nav_link { /*ССЫЛКА ВВЕРХ*/
+            font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; /*Выбор семейства ШРИФТа*/
+            font-size: 1.05em; /*РАЗМЕР шрифта*/
+            float: right; /*ВЫРАВНИВАНИЕ блокового элемента справа*/
+            padding: 0 2em 2em 0; /* ОТСТУПЫ сверху справа снизу слева*/
+            text-decoration:none; /*Скрыли подчеркивание*/
         }
 
     </style>
@@ -79,20 +82,16 @@ h3 - Заголовки разделов
     </nav>
 
 <!-- Правый блок -->
-    <a name="top"></a>          <!--Ссылка "Наверх"-->
-    <header>
+<section>
+
         <h1>Кенгуру</h1>    <!-- Название статьи -->
         <hr>
         <em>Материал из Википедии</em>
-    </header>
-    <section>
         <article>
-
-            <img id="main_pic" src="http://goo.gl/OZ1CQR" align="right" border="1px"> <!-- Главное изображение -->
-            <dl>
-                <dt><big><strong>Кенгуру</strong></big></dt>
-                <dd>—  <em>(лат. Macropus)</em> Общеупотребительное название группы животных из отряда двурезцовых сумчатых млекопитающих. В широком смысле термин кенгуру относится ко всем представителям семейства кенгуровых. В узком смысле это название применяется по отношению к наиболее крупным представителям этого семейства, тогда как более мелкие называются валлару и валлаби. Кенгуру живут от 8 до 16 лет</dd>
-            </dl>
+            <!--<h3><em>Кенгуру</em></h3>-->
+            <img id="main_pic" src="http://goo.gl/OZ1CQR" alt="Кенгуру"> <!-- Главное изображение -->
+            <!-- <img  src="http://goo.gl/OZ1CQR" alt="Кенгуру"> Главное изображение -->
+                <blockquote>—  <em>(лат. Macropus)</em> Общеупотребительное название группы животных из отряда двурезцовых сумчатых млекопитающих. В широком смысле термин кенгуру относится ко всем представителям семейства кенгуровых. В узком смысле это название применяется по отношению к наиболее крупным представителям этого семейства, тогда как более мелкие называются валлару и валлаби. Кенгуру живут от 8 до 16 лет</blockquote>
         </article>
 
         <article>
@@ -125,6 +124,11 @@ h3 - Заголовки разделов
             <p class="break_line">В природе у кенгуру много врагов. Раньше на крупных особей охотились собаки динго и сумчатые волки (ныне истребленные), на мелких — сумчатые куницы, хищные птицы, змеи. После завоза в Австралию и на прилегающие острова европейских хищников к их естественным врагам присоединились лисицы и кошки. Если мелкие виды перед хищниками беззащитны, то крупные кенгуру могут за себя постоять. Обычно в случае опасности они предпочитают спасаться бегством, но загнанное животное может неожиданно повернуться к преследователю и «обнять» его передними лапами, нанося задними мощные удары. Обычную собаку удар задней ноги может убить, а человеку нанести серьезное увечье. К тому же известны случаи, когда кенгуру спасались в водоемах и топили преследующих их собак в воде.</p>
             <p class="break_line">Если убегающая от опасности мамаша-кенгуру понимает, что уйти ей не удастся, она на бегу выбрасывает своего кенгурёнка из сумки. Но выбрасывает кенгуру своего детёныша исключительно метко - не под ноги преследователю, а всегда в укрытое место, например, в кусты или расщелины скал. Делает это она  в самых редких случаях, когда уже нет шансов на спасение. И если ей удается спастись, она обязательно возвращается и пытается отыскать детёныша.</p>
             <p class="break_line">Хищники — не единственная беда кенгуру. Огромный вред им наносят пищевые конкуренты, завезенные людьми: кролики, овцы, коровы. Они лишают кенгуру естественного корма, из-за чего многие виды были вытеснены в засушливые пустынные районы. Мелкие виды не в состоянии мигрировать на большие расстояния, поэтому просто исчезают под натиском пришельцев. В свою очередь люди рассматривают кенгуру как своих конкурентов и нежелательных соседей, поэтому охотятся на них всеми возможными способами. Если раньше кенгуру добывали ради мяса и шкур, то сейчас их просто отстреливают, травят собаками или ставят капканы. Австралия является крупным мировым поставщиком мяса кенгуру. Правда, его вкусовые качества уступают мясу домашнего скота, поэтому его используют при производстве консервов для тех же собак или как экзотический компонент ресторанной кухни.</p>
+            <!--<section class="Photo_Block">
+                <img src="">
+
+            </section>-->
+
         </article>
 
         <article>
@@ -147,12 +151,13 @@ h3 - Заголовки разделов
             <hr>
             <ul>
                 <li>Хороший темп крупные виды кенгуру выдерживают не более 10 минут.</li>
-                <li>Прыжок в длину самого крупного рыжего кенгуру может достигать 9 и даже 12 м, а скорость 50 км/ч! В высоту рыжие кенгуру могут прыгать на высоту до 2 м.</li>
+                <li>Прыжок в длину самого крупного рыжего кенгуру может достигать 9 и даже 12 м, а скорость 50 км/ч!</li>
+                <li>В высоту рыжие кенгуру могут прыгать на высоту до 2 м.</li>
             </ul>
 
         </article>
-        <p id="nav_link"><a href="#top" style="text-decoration:none; border-bottom: 0.07em dashed cadetblue">↑ Наверх</a></p>
-    </section>
 
+    </section>
+        <a id="nav_link" href="javascript:scroll(0,0)"> ↑ Наверх</a>      <!--Ссылка "Наверх"-->
 </body>
 </html>
